# realmap

./: .env.example  .gitignore  AI_DEV_CONTROL_PANEL.md  AI_Instructions.md  DEV_PLAN.md  LLM_PROCESSING_STATUS.md  LOGGING_AND_STATE_MANAGEMENT_IMPROVEMENTS.md  PDF_DOWNLOAD_SOLUTION.md  PREVIEW_DOWNLOAD_FIX.md  PREVIEW_EXTRACTION_TEST_REPORT.md  PREVIEW_FIX_VERIFICATION.md  PREVIEW_LINKS_COMPLETE_FIX.md  PREVIEW_LINKS_DIAGNOSIS_REPORT.md  PREVIEW_LINKS_FIX_SUMMARY.md  PROJECT_STATUS.md  README.md  SCHEMA_GAP_ANALYSIS.md  SESSION_SUMMARY_20251117.md  TECHNICAL_SPECIFICATION.md  TEST_PLAYBOOK.md  USER_GUIDE.md  alembic.ini  analysis_output.txt  analysis_result.txt  analyze_json.py  analyze_parallel_logs.ps1  auto_pipeline.py  check_ai_health.py  check_data.py  check_health.py  config.debug.yaml  config.delta-mode.yaml  config.example.yaml  config.phase2.sample.yaml  config.raipur-20.yaml  config.realcrawl-12projects.yaml  config.realcrawl-2projects.yaml  config.test-1project.yaml  config.test-durg.yaml  config.yaml  (+34 more)
ai/: dependencies.py  main.py  schemas.py  task-library.md
airflow/: .gitignore  README.md
alembic_migrations/: env.py
cg_rera_extractor/: __init__.py  cli.py  worker.py
data/: Real Estate Regulatory Authority.mhtml  Real Estate Regulatory Authority2.htm  geocode_cache.sqlite  scraped_cache.json  test_prices.csv
data-audit/: schema-diff.md  schema-upgrade-plan.md  table-audit.md
docker/: Dockerfile.ai  docker-compose.ai.yml
docs/: AI_Architecture_and_Governance.md  AI_Features.md  AI_Implementation_Guide.md  AMENITIES_VS_LOCATION.md  AMENITY_PROVIDER.md  AMENITY_STATS.md  API-Reference.md  API_IMPLEMENTATION_SUMMARY.md  Amenities-Engine.md  Architecture.md  CONDITIONAL_SCRAPING.md  Changelog.md  DATA_INVENTORY.md  DATA_MODEL_CURRENT.md  DATA_MODEL_MIGRATION_PLAN.md  DATA_MODEL_TARGET.md  DB_GUIDE.md  DB_MODEL_CURRENT.md  DELTA_SCRAPING_QUICKSTART.md  DEV_GUIDE.md  DOCUMENTATION_MAP.md  DOCUMENTATION_STATUS.md  DOC_CLEANUP_PLAN.md  Data-Pipeline.md  FRONTEND_GAP_ANALYSIS.md  GEO_PIPELINE.md  GEO_QA_PLAN.md  Geo-Intelligence.md  Glossary.md  PHASE4_GEO_DESIGN.md  PHASE4_GEO_OVERVIEW.md  PHASE5_AMENITY_DESIGN.md  PHASE6_API_DESIGN.md  PHASE6_QA_CHECKLIST.md  PHASE_PRICE_DESIGN.md  PROJECT_SCORES.md  QA_GUIDE.md  README.md  Scraper-Engine.md  UI-UX-Design.md  (+4 more)
frontend/: README.md  index.html  (+6 more)
(+523 files in other folders)
