[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cg-rera-extractor"
version = "0.1.0"
description = "Extraction framework for the Chhattisgarh RERA portal"
authors = [{ name = "CG RERA Data Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "playwright>=1.40",
    "requests>=2.31",
    "uvicorn[standard]>=0.23",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
where = ["."]
include = ["cg_rera_extractor*"]

[tool.setuptools.package-data]
"cg_rera_extractor.parsing" = ["data/*.json"]
